--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,16 @@
 {
-  "database": {
-    "rules": "    no"
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source":"**",
+        "destination":"/index.html"
+      }
+    ]
   }
 }
