--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-google-maps/api": "^2.12.2",
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^16.0.2",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.23.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
