--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@main
       - name: Install Dependencies
-        run: yarn install
+        run: npm install
       - name: Build
-        run: yarn run build
+        run: npm run build
         env:
           API_KEY: ${{ secrets.API_KEY }}
           PAYPAL_CLIENT_ID: ${{ secrets.PAYPAL_CLIENT_ID }}
